--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -30,6 +30,7 @@
             {% endfor %}
          {% endif %}
         {% endwith %}
+        {{ form.csrf_token }}
         {{ wtf.quick_form(form, novalidate=True, button_map={"submit": "primary"}) }}
       </div>
     </div>
